k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-client
  template:
    metadata:
      labels:
        app: chat-client
    spec:
      containers:
      - name: chat-client
        image: booboo531/chat-client:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chat-client
spec:
  selector:
    app: chat-client
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
