k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mern-chat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-client
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: chat-server
            port:
              number: 5000
